# game-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  flake.nix  manifest.json  risk.md  start.sh
assets/Sponza/glTF/: Sponza.gltf
assets/better_monkey/: better_monkey.gltf
assets/colored_monkey/: colored_monkey.gltf
assets/fire_monster/: license.txt  scene.gltf
assets/monkey/: monkey.gltf
audio/: .gitignore  CMakeLists.txt  README.md  start.sh
audio/include/: audio.h  device.h  effects.h  sound.h  source.h  sources.h  timer.h  utils.h  vec.h  wav.h
audio/src/: audio.c  device.c  effects.c  main.c  sound.c  source.c  sources.c  timer.c  wav.c
engine/src/: component.hpp  main.cpp  system.cpp  types.h  utils.cpp  utils.hpp
prefabs/: Enemy.json  Ghost.json  Player.json  Scene.json
shaders/: basic.frag.glsl  basic.vert.glsl  common.glsl  frag.spv  pbr.glsl  pbr_inputs.glsl  rect.frag.glsl  rect.vert.glsl  skinned.vert.glsl  skinning.frag  skinning.vert  skinning_frag.spv  skinning_vert.spv  skybox.frag.glsl  skybox.vert.glsl  triangle.frag  triangle.vert  vert.spv
shaders/SPIRV/: basic.frag.spv  basic.vert.spv  cubemapgen.frag.spv  cubemapgen.vert.spv  prefilter_env_map.frag.spv  rect.frag.spv  rect.vert.spv  skybox.frag.spv  skybox.vert.spv
shaders/offline/: brdf_lut.comp.glsl  cubemapgen.frag.glsl  cubemapgen.vert.glsl  prefilter_env_map.frag.glsl  prefilter_env_map.vert.glsl
src/: Camera.h  arena.h  client.cpp  client.hpp  core.h  definitions.h  game.cpp  game.h  main.cpp  network.hpp  platform.h  renderer.h  server.cpp  server.hpp  win32_main.cpp  win32_platform.cpp
src/engine/: AssetLoader.cpp  AssetLoader.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Input.cpp  Input.h  Prefs.cpp  Prefs.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  assets.cpp  assets.h  camera.cpp  camera.h  core.h  input.cpp  input.h  keyboard.h  linux_main.cpp  linux_platform.cpp  platform.h  renderer - Copy.cpp  renderer.cpp  renderer.h  win32_main.cpp  win32_platform.cpp
src/engine/audio/: audio.cpp  audio.h  constants.h
src/engine/audio/listener/: device.h  listener.h
src/engine/audio/source/: reverb.h  sound.h  source.h  wav.h
src/engine/ecs/: component.cpp  component.hpp  ecs.cpp  ecs.hpp  entity.cpp  entity.hpp  entityarray.cpp  entityarray.hpp  main.cpp  query.hpp  resource.cpp  resource.hpp  signature.cpp  signature.hpp  system.cpp  system.hpp  systemmanager.cpp  systemmanager.hpp  utils.hpp
src/engine/graphics/: Buffer.cpp  Buffer.h  GPURingBuffer.cpp  GPURingBuffer.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Sampler.cpp  Sampler.h  SkinnedMeshPass.cpp  SkinnedMeshPass.h  Swapchain.cpp  Swapchain.h  constants.h  context.cpp  context.h  vk.h
src/engine/network/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  network.cpp  network.hpp  server.cpp  server.hpp
src/engine/scene/: AssetManifest.cpp  AssetManifest.h  Node.cpp  Node.h  Scene.cpp  Scene.h
src/engine/utils/: logging.cpp  logging.h
src/examples/: main.cpp
src/game/: components.cpp  components.h  enemy.cpp  enemy.h  game.cpp  game.h  gui.cpp  gui.h  main.cpp  player.cpp  player.h  settings.h  state.h  time.cpp  time.h  util.cpp  util.h
src/game/world_gen/: definitions.h  main.cpp  map.cpp  map.h  union_find.h
src/other/: test.cpp
src/other-dir/: error.h
src/utils/: logging.cpp  logging.h  macro.h
testing/: mst.cpp
tools/asset_processor/: CMakeLists.txt  build.zig  build.zig.zon  mesh_data.bin.bak  mesh_data_new.bin.bak
tools/asset_processor/src/: AssetImporter.cpp  AssetImporter.h  main.cpp
